--- a/app/rich/templates/css/320x50.scss
+++ b/app/rich/templates/css/320x50.scss
@@ -36,7 +36,7 @@ html, body {
             }
         }
 
-        .cta img {
+        .cta img, .logo {
             width: {width}px;
         }
     }
