--- a/app/rich/templates/css/728x90.scss
+++ b/app/rich/templates/css/728x90.scss
@@ -64,6 +64,10 @@ html, body {
             }
         }
 
+        .logo {
+            width: {width}px;
+        }
+
         .cta {
             z-index: 5;
             cursor: pointer;
